--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -52,6 +52,8 @@
 }
 
 .heroImg{
+    border-radius: 100%;
+
     width: 50%;
     z-index: 1;
 
@@ -101,7 +103,7 @@
     z-index: 0;
 }
 
-@media screen and (max-width: 830px) {
+@media screen and (max-width: 1000px) {
     .container{
         flex-direction: column-reverse;
     }
