--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -14,6 +14,11 @@
     text-transform: uppercase;
 }
 
+.nota{
+    color: var(--color-text);
+    opacity: 0.5;
+}
+
 .projects{
     margin-top: 37px;
     display: flex;
