hidding linkeding link and changing hover on hero contact btn

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -52,6 +52,11 @@
     cursor: pointer;
 }
 
+.contactBtn:hover {
+  background-color: var(--color-text);
+  color: var(--color-primary);
+}
+
 .heroImg{
     border-radius: 100%;
 
