--- a/src/components/Projects/ProjectCard.module.css
+++ b/src/components/Projects/ProjectCard.module.css
@@ -12,7 +12,8 @@
 
     box-shadow: 0 16px 14px #001231;
     padding: 18px 24px;
-    max-width: 345px;
+    width: 350px;
+    height: 600px;
 }
 
 .image{
@@ -20,7 +21,7 @@
 }
 
 .title{
-    font-size: 25px;
+    font-size: 30px;
     font-weight: 700;
 }
 
@@ -53,6 +54,7 @@
     margin-top: 26px;
     display: flex;
     justify-content: space-around;
+    margin-top: auto;
 }
 
 .link{
@@ -65,6 +67,7 @@
     padding: 1px 22px;
 
     cursor: pointer;
+    margin-bottom: auto;
 }
 
 .link:hover{
